1. create register page 2. create main page 3. add user register controller/ model/ router/ CSS 4. add web main CSS 5. update server JS 6. add footer and header

--- a/cartoonopia-web-react/.env
+++ b/cartoonopia-web-react/.env
@@ -8,4 +8,4 @@
  */
 
 PORT=3000
-MONGO_URI=
+MONGO_URI=mongodb+srv://suijianbin:Jimmy%2F521834@jianbincluster.mwb9bnt.mongodb.net/?retryWrites=true&w=majority&appName=JianbinCluster
